--- a/README
+++ b/README
@@ -1,14 +1,23 @@
-Personal Portfolio
-This is my personal portfolio where I showcase my projects, skills, and experience in web development.
+# 💼 Portafolio de Adrián Zúñiga Pérez
 
-Contents:
-- Description
-- Projects
-- Contact
+¡Bienvenido a mi portafolio! Soy un desarrollador web con experiencia en **Front-End**, **Full Stack**, y diseño de interfaces modernas y funcionales. Me especializo en la creación de páginas web intuitivas y optimizadas, utilizando tecnologías actuales como **React**, **Next.js**, **Sass**, y **Angular**.
 
-Description:
-In my portfolio, I showcase my passion for web development and my experience with various technologies and programming languages. I present my notable projects completed throughout my Web Development and Design career, including descriptions, screenshots, and links to their corresponding repositories.
+## 📫 Contacto
 
-If you wish to get in touch with me, you can email me at: az1767824@gmail.com
+- 🌐 [Mi página web](https//:adrian-portfolio-web.netlify.app)
+- 📧 Email: adrian.web.md@gmail.com  
+- 💼 [LinkedIn](https://linkedin.com/in/az-dev)  
+- 🧑‍💻 [GitHub](https://github.com/4Driian)
 
-Thank you for visiting my portfolio!
+---
+
+## 📌 Sobre mí
+
+Soy técnico en Desarrollo y Diseño Web egresado del **CETAV**, y tengo experiencia construyendo soluciones a medida para clientes en distintos sectores. Me apasiona aprender nuevas tecnologías, optimizar procesos y trabajar en equipo para lograr productos de alta calidad.
+
+---
+
+## 🧠 Objetivo
+
+Seguir creciendo profesionalmente en el área de desarrollo web, participar en proyectos desafiantes y aportar al éxito de los equipos con los que colaboro.
+
