--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-# 💼 Portafolio de Adrián Zúñiga Pérez
+💼 Portafolio de Adrián Zúñiga Pérez
 
-¡Bienvenido a mi portafolio! Soy un desarrollador web con experiencia en **Front-End**, **Full Stack**, y diseño de interfaces modernas y funcionales. Me especializo en la creación de páginas web intuitivas y optimizadas, utilizando tecnologías actuales como **React**, **Next.js**, **Sass**, y **Angular**.
+¡Bienvenido a mi portafolio! Soy un desarrollador web con experiencia en **Front-End**, **Full Stack**, y diseño de interfaces modernas y funcionales. Me especializo en la creación de páginas web intuitivas y optimizadas, utilizando tecnologías actuales como React, Next.js, Sass, y Angular.
 
-## 📫 Contacto
+📫 Contacto
 
 - 🌐 [Mi página web](https//:adrian-portfolio-web.netlify.app)
 - 📧 Email: adrian.web.md@gmail.com  
@@ -11,13 +11,13 @@
 
 ---
 
-## 📌 Sobre mí
+📌 Sobre mí
 
 Soy técnico en Desarrollo y Diseño Web egresado del **CETAV**, y tengo experiencia construyendo soluciones a medida para clientes en distintos sectores. Me apasiona aprender nuevas tecnologías, optimizar procesos y trabajar en equipo para lograr productos de alta calidad.
 
 ---
 
-## 🧠 Objetivo
+🧠 Objetivo
 
 Seguir creciendo profesionalmente en el área de desarrollo web, participar en proyectos desafiantes y aportar al éxito de los equipos con los que colaboro.
 
